--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,32 +1,176 @@
+@use '../../styles/mixins';
+
 .modal {
-  // display: flex;
-  // justify-content: space-evenly;
-  // align-items: center;
+  display: flex;
   box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
   background-color: grey;
-  border: 2px solid rgb(240, 240, 240);
-  border-radius: 12px;
+  border-radius: 10px;
   position:  absolute;
+  gap: 40px;
   width: 100%;
-  max-width: 500px;
+  max-width: 900px;
   height: 100%;
-  max-height: 400px;
-  top: 70px;
-  left: calc(50% - 250px);
-  bottom: 70px;
+  max-height: calc(100vh - 60px);
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 30px;
   box-sizing: border-box;
   z-index: 2;
 
-  ul {
-    padding: 0;
-    margin: 0;
-    overflow-y: scroll;
-    height: 100%;
-    max-height: 200px;
+  @include mixins.sm {
+    flex-direction: column;
+  }
 
-    p {
-      margin: 0;
+  h2, h3, p, span, button {
+    color: #fff;
+  }
+
+  button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    outline: none;
+    background: none;
+    padding: 0;
+    line-height: 1;
+    border-radius: 100%;
+    border: none;
+    width: 25px;
+    height: 25px;
+    transition: .3s ease-in-out;
+
+    &:hover {
+      background: #fff;
+      color: #000;
     }
   }
+}
+
+.backgroundImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: blur(30px);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: contrast(50%) brightness(0.5);
+  }
+}
+
+.column {
+  width: 100%;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar {
+    background: transparent;
+  }
+
+  &:last-of-type {
+    min-width: 60%;
+    overflow: auto;
+  }
+}
+
+.albumImage {
+  margin-bottom: 20px;
+
+  @include mixins.sm {
+    width: 100%;
+    object-fit: contain;
+    max-height: 170px;
+  }
+}
+
+.albumName {
+  margin-bottom: 10px;
+}
+
+.albumArtist {
+  margin-bottom: 20px;
+}
+
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.albumCategory {
+  border: 1px solid #fff;
+  border-radius: 2px;
+  padding: 1px 2px;
+  width: fit-content;
+}
+
+.albumCategory,
+.albumItemCount,
+.albumReleaseDate {
+  margin-bottom: 10px;
+}
+
+
+.tracklist {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-right: 20px;
+
+  li {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+    transition: .3s ease-in-out;
+    padding: 10px;
+    border-radius: 10px;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .row {
+      &:nth-of-type(2) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.trackName {
+  font-size: 18px;
+}
+
+.trackExplicitness {
+  border: 1px solid #fff;
+  margin-left: 5px;
+  font-size: 12px;
+  line-height: 1;
+  padding: 1px;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+.trackArtistName,
+.trackTime {
+  opacity: 0.8;
 }
