--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,15 +5,16 @@
   box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
   background-color: grey;
   border-radius: 10px;
-  position:  absolute;
+  position:  fixed;
   gap: 40px;
   width: 100%;
   max-width: 900px;
   height: 100%;
-  max-height: calc(100vh - 60px);
-  top: 30px;
+  // max-height: calc(100vh - 60px);
+  max-height: 800px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   padding: 30px;
   box-sizing: border-box;
   z-index: 2;
